--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Uabcs AR</title>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"> </script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/3.0.0/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
     <body style="margin: 0px; overflow: hidden;">
         <a-scene embedded arjs>
             <a-marker preset="hiro">
