--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
                 <!--prueba con modelo 3d -->
 
-                <a-entity gltf-model="scene.gltf"
-                position="0 0.5 0"
-                ></a-entity>
+                
+                <a-asset-item id="amogus" src="/path/to/scene.gltf"></a-asset-item>
+
+                <a-entity gltf-model="#amogus"></a-entity>
 
 
             </a-marker>
