--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                 <!--prueba con modelo 3d -->
 
                 
-                <a-asset-item id="amogus" src="/path/to/scene.gltf"></a-asset-item>
+                <a-assets>
+                    <a-asset-item id="amogus" src="/path/to/scene.gltf"></a-asset-item>
+                </a-assets>
 
-                <a-entity gltf-model="#amogus"></a-entity>
+                <a-entity gltf-model="#amogus" position="0 0.5 0"></a-entity>
 
 
             </a-marker>
