--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
     <body style="margin: 0px; overflow: hidden;">
-        <a-scene embedded arjs>
+        <a-scene>
             <a-marker preset="hiro">
 
                <!--
