--- a/index.html
+++ b/index.html
@@ -7,27 +7,20 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
     <body style="margin: 0px; overflow: hidden;">
-        <a-scene>
-            <a-marker preset="hiro">
+        <a-scene embedded arjs>
+            <!--
+            <a-box position="0 0.5 0" material="color: red">
+            <a-animation attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite" easing="linear"></a-animation>
+            </a-box>
+            -->
 
-               <!--
-                <a-box position="0 0.5 0" material="color: red">
-                    <a-animation attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite" easing="linear"></a-animation>
-                </a-box>
-                -->
+            <!--prueba con modelo 3d -->
 
-                <!--prueba con modelo 3d -->
+                <a-entity scale="0.2 0.2 0.2">
+                    <a-entity gltf-model="scene.gltf" scale="6 6 6" crossOrigin="anonymous"></a-entity>
+                </a-entity>
 
-                
-                <a-assets>
-                    <a-asset-item id="amogus" src="/path/to/scene.gltf"></a-asset-item>
-                </a-assets>
-
-                <a-entity gltf-model="#amogus" position="0 0.5 0"></a-entity>
-                
-
-            </a-marker>
-            <a-entity camera></a-entity>
+            <a-marker-camera preset="hiro"></a-marker-camera>
         </a-scene>
     </body>
 </head>
