--- a/index.html
+++ b/index.html
@@ -2,23 +2,19 @@
 <html lang="en">
 <head>
     <title>Uabcs AR</title>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar.js"></script>
     <body style="margin: 0px; overflow: hidden;">
         <a-scene embedded arjs>
-            <!--
-            <a-box position="0 0.5 0" material="color: red">
-            <a-animation attribute="rotation" dur="3000" to="360 360 0" repeat="indefinite" easing="linear"></a-animation>
-            </a-box>
-            -->
-
-            <!--prueba con modelo 3d -->
-
-                <a-entity scale="0.2 0.2 0.2">
-                    <a-entity gltf-model="scene.gltf" scale="6 6 6" crossOrigin="anonymous"></a-entity>
-                </a-entity>
-
-            <a-marker-camera preset="hiro"></a-marker-camera>
+            <a-marker preset="hiro">
+                <a-entity
+                position="0 0 0"
+                scale="0.05 0.05 0.05"
+                gltf-model="scene.gltf"
+                ></a-entity>
+            </a-marker>
+            <a-entity camera></a-entity>
         </a-scene>
     </body>
 </head>
