--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
     <body style="margin: 0px; overflow: hidden;">
-        <a-scene embedded arjs>
+        <a-scene embedded arjs renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector id="scene">
             <a-marker preset="hiro">
                 <a-entity
                 position="0 0 0"
-                scale="0.005 0.005 0.005"
+                scale="0.05 0.05 0.05"
                 gltf-model="scene.gltf"
                 ></a-entity>
             </a-marker>
