--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                 position="0 0 0"
                 scale="0.05 0.05 0.05"
                 gltf-model="scene.gltf"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10"
                 ></a-entity>
             </a-marker>
             <a-entity camera></a-entity>
