--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <title>Uabcs AR</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+    <script src="gesture-detector.js"></script>
+    <script src="gesture-handler.js"></script>
 
     <body style="margin: 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector id="scene">
-            <a-marker preset="hiro">
+            <a-marker preset="hiro"
+                raycaster="objects: .clickable"
+                emitevents=" true"
+                cursor="fuse: false; rayOrigin: mouse;"
+                id="markerA"
+            
+            >
                 <a-entity
                 position="0 0 0"
-                scale="0.05 0.05 0.05"
+                scale="0.5 0.5 0.5"
                 gltf-model="scene.gltf"
                 class="clickable"
-                gesture-handler="minScale: 0.25; maxScale: 10"
+                gesture-handler
+
                 ></a-entity>
             </a-marker>
             <a-entity camera></a-entity>
